# python-nexus-utilities

./: .coveragerc  .gitignore  .pre-commit-config.yaml  Jenkinsfile  README.md  SANS2D_example.py  build.py  coordinatetransformer.py  copy_datasets.py  copy_items.py  detector_plotter.py  detectorplotter.py  drawoff.py  hdf5sizeprofiler.py  idfparser.py  mathutils.py  nexusbuilder.py  nexustooff.py  nexusutils.py  parse_mantid_inst_def.py  readwriteoff.py  requirements.txt  setup.cfg  setup.py
example_instruments/all/: parse_all.py  try_parsing_all.py
example_instruments/loki/: LOKI_example.py  generateLoki.py
example_instruments/off_and_cylinder/: off_and_cylinder_example.py  small_tube_pixel_detector.xml
example_instruments/off_files/: TEAPOT_example.py  cube.off  death_star.off  example_nx_geometry.nxs  icosa.off  teapot.off
example_instruments/sans2d/: SANS2D_NXlog_example.py  SANS2D_example.py  SANS2D_scan_example.py  nxlogexample.py  nxloghelper.py
example_instruments/smallfake/: SMALLFAKE_Definition.xml  SMALLFAKE_example.py  minimal_geometry.xml
example_instruments/wish/: WISH_Definition_10Panels.xml  WISH_example.py
nexusutils/: build.py  coordinatetransformer.py  detectorplotter.py  drawoff.py  generatefakeevents.py  hdf5sizeprofiler.py  idfparser.py  nexusbuilder.py  nexustooff.py  readwriteoff.py  utils.py
nexusutils.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: idfhelper.py  mathutils.py  test_coordinatetransformer.py  test_idfparser.py  test_nexusbuilder.py  test_nexusutils.py  test_readwriteoff.py
(+14 files in other folders)
