[metadata]
name = nexusutils
version = 0.1.0
description = Python NeXus Utilities
home-page = https://github.com/ess-dmsc/python-nexus-utilities
url = https://github.com/ess-dmsc/python-nexus-utilities
license = BSD 2-clause
license_file = License.md
platform = any

[options]
packages = nexusutils
install_requires=
        appdirs
        h5py
        numexpr
        numpy
        packaging
        pyparsing
        tables
        matplotlib
        tabulate

[flake8]
ignore = E501, E203, E402, W503, Q000, W293
# E501 & E203: Formatting handled by Black
# E402 complains about imports not being at the top
# W503 complains about splitting if across lines which conflicts with Black
# Q000 complains about using "" and not '' which conflicts with Black
# W293 blank lines with whitespace, conflicts with Black in doc comments
exclude = README.md, venv

[tool:pytest]
addopts = -s
junit_family=xunit2
testpaths = ./tests
